# palo-it-assignment

./: Makefile  README.md  commands.txt  pyproject.toml  whitelist.py
data/: badge_referential.csv  salary_grid.csv  user_referential.csv
requirements/: requirements.in  requirements.txt
scripts/bash/: run_black.sh  run_black_on_changed_files.sh  run_flake8.sh  run_isort.sh  run_mypy.sh  run_vulture.sh
scripts/bash/hooks/: pre-commit
src/palo/: __init__.py  config.toml  data_models.py  generate_salary_grid_and_badge_referential.py  generate_user_referential_data.py  main.py
tests/test_palo/: test_py.py
